--- a/custom.scss
+++ b/custom.scss
@@ -58,6 +58,14 @@ $code-block-border-left: #D1495B;
   top: 20px
 }
 
+.reveal .custom-title2 {
+  font-family: 'Roboto Slab';
+  color: #19647E;
+  font-size: 2em;
+  text-align: center;
+  top: 20px
+}
+
 .reveal .custom-subtitle {
   font-family: 'Roboto Slab';
   color: #4B3F72;
